# MatterTune

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ADVANCED_USAGE.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  config.json  config.json.schema  config.yml  pl_example.py  pyproject.toml  requirements.txt  test.ipynb  test.py
.github/workflows/: docs.yml
docs/: LIGHTNING.md  MOTIVATION.md  Makefile  QUICK_START.md  api.md  conf.py  contributing.md  index.md  installation.md  introduction.md  license.md  motivation.md  requirements.txt
docs/_templates/: custom-class-template.rst  custom-module-template.rst
docs/backbones/: JMP.md  M3GNet.md  ORB.md  eqv2.md  jmp.md  m3gnet.md  mattersim.md  orb.md
docs/guides/: datasets.md  fine-tuning.md  lightning.md  model_usage.md  normalization.md  recipes.md  training_config.md
example/gemnet/: backbone.py
example/jmp/: backbone.py  jmp_data_module.py  load_pretrain.py  main.py
example/matgl_band_gap/: band_gap.py  band_gap_matbench.py  bandgap_data_module.py  m3gnet_backbone.py
example/matgl_ef/: README.md  efs_data_module.py  m3gnet_backbone.py  water_ef.py
examples/: application.md  eqv2-omat.ipynb  jmp-omat-autosplit.ipynb  jmp-omat.ipynb  jmp-omat.py  m3gnet-waterthermo.ipynb  matgl_main.py  matgl_train.py  orb-omat.ipynb
examples/checkpoints/: best-checkpoint-v1.ckpt  best-checkpoint.ckpt
examples/custom/: eqv2-finetune.py  jmp-finetune-silica.py  m3gnet-finetune.py  orb-finetune-silica.py  orb-finetune.py
examples/data/: H2O.cif  mp_gap_sample_1000.xyz  water_ef_train.json  water_ef_train.xyz
examples/internal_feature/: export.py  periodic_table_color.json
examples/jmp/: bandgap.py  jmp_backbone.py  load_pretrain.py  md.py  property_prediction.py  water_ef.py
examples/json_dataset/: orb-finetune.py
examples/matbench/: eqv2-finetune.py  get_gnome_data.py  jmp-finetune.py  matbenchmark-foldx.py  orb-finetune.py  plot_distribution.py  results.md  run.sh  screening.py
examples/matbench-discovery/: array_submit.sh  batch_submit.sh  collect.py  ground_truth.py  results.md  run.sh  split_relax.py  test_eqv2.py  test_mattertune_discovery.py  test_orb.py
examples/matbench-full/: a.py  batch_submit.sh  jmp-parameter-hparams.py  log.txt  matbenchmark-foldx.py  matbenchmark.py  nersc_run.sh  normalize.py  note.md  phonons.sh  readout.py  results.md  run.sh  run_jmp.sh  run_orb.sh  run_screening.sh  screening.py  y_distribution.py
examples/matgl/: m3gnet_backbone.py
examples/matgl_ef_unfinished/: efs_data_module.py  m3gnet_backbone.py  water_ef.py
examples/structure-optimization/: bfgs.py  jmp-finetune.py  matbench-discovery.py  orb-finetune.py  random_gen.py
examples/water-thermodynamics/: draw_rdf_plots.py  energy_reference.py  eqv2-finetune.py  jmp-finetune.py  m3gnet-finetune.py  mattersim-finetune.py  md.py  orb-finetune.py  rdf_analysis.py  read_txt.py  results.md  run.sh  (+3 more)
notebooks/: eqv2-omat.ipynb  jmp-omat-autosplit.ipynb  jmp-omat.ipynb  m3gnet-waterthermo.ipynb  matgl_train.py  mattersim-waterthermo.ipynb  orb-omat.ipynb
(+353 files in other folders)
