[tool.poetry]
name = "mattertune"
version = "0.1.0"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
torch = "*"
typing-extensions = "*"
pytorch_lightning = "*"
pydantic = "*"
jaxtyping = "*"
torch_scatter = "*"
ase = "*"
pymatgen = "*"
torchmetrics = "*"
einops = "*"
e3nn = "*"
wandb = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "standard"
deprecateTypingAliases = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPrivateImportUsage = false

[tool.ruff.lint]
select = ["FA102", "FA100"]
ignore = ["F722", "F821", "E731", "E741"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
