[project]
name = "mattertune"
version = "0.1.0"
description = ""
authors = [{ name = "Nima Shoghi", email = "nimashoghi@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "ase",
    "scikit-learn",
    "lightning",
    "numpy",
    "torchmetrics",
    "nshconfig[extra]",
    "nshconfig-extra[extra]",
    "wandb",
    "nshutils",
]

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "ruff"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
typeCheckingMode = "standard"
deprecateTypingAliases = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPrivateImportUsage = false
reportMatchNotExhaustive = "error"
reportImplicitOverride = "warning"
reportShadowedImports = "warning"

[tool.ruff.lint]
select = ["FA102", "FA100", "F401"]
ignore = ["F722", "F821", "E731", "E741"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
